WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
84520
[chromium] When prepareToDraw fails due to animation checkerboard, we need to call setNeedsCommit
https://bugs.webkit.org/show_bug.cgi?id=84520
Summary
[chromium] When prepareToDraw fails due to animation checkerboard, we need to...
vollick
Reported
2012-04-20 20:57:00 PDT
Make sure we commit if we drop frames due to animation checkerboard.
Attachments
Patch
(3.33 KB, patch)
2012-04-20 21:00 PDT
,
vollick
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
vollick
Comment 1
2012-04-20 21:00:05 PDT
Created
attachment 138219
[details]
Patch
Adrienne Walker
Comment 2
2012-04-21 15:03:15 PDT
Comment on
attachment 138219
[details]
Patch I feel like I remember that this used to happen, but maybe it got removed in a refactoring. Thanks! R=me.
WebKit Review Bot
Comment 3
2012-04-23 07:53:27 PDT
Comment on
attachment 138219
[details]
Patch Clearing flags on attachment: 138219 Committed
r114898
: <
http://trac.webkit.org/changeset/114898
>
WebKit Review Bot
Comment 4
2012-04-23 07:53:31 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug