[chromium] When prepareToDraw fails due to animation checkerboard, we need to call setNeedsCommit https://bugs.webkit.org/show_bug.cgi?id=84520

Patch by Ian Vollick <vollick@chromium.org> on 2012-04-23
Reviewed by Adrienne Walker.

Source/WebCore:

Tested in CCLayerTreeHostImplTest.prepareToDrawFailsWhenAnimationUsesCheckerboard

* platform/graphics/chromium/cc/CCLayerTreeHostImpl.cpp:
(WebCore::CCLayerTreeHostImpl::prepareToDraw):

Source/WebKit/chromium:

* tests/CCLayerTreeHostImplTest.cpp:
(WebKitTests::TEST_F):

Canonical link: https://commits.webkit.org/102083@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114898 268f45cc-cd09-0410-ab3c-d52691b4dbfc