Source/WebKit/chromium/tests/CCLayerTreeHostImplTest.cpp
@@ -584,7 +584,9 @@ TEST_F(CCLayerTreeHostImplTest, prepareToDrawFailsWhenAnimationUsesCheckerboard)
     root = static_cast<DidDrawCheckLayer*>(m_hostImpl->rootLayer());
     root->addChild(MissingTextureAnimatingLayer::create(1, true, false, true));
 
+    m_didRequestCommit = false;
     EXPECT_FALSE(m_hostImpl->prepareToDraw(frame));
+    EXPECT_TRUE(m_didRequestCommit);
     m_hostImpl->drawLayers(frame);
 
     // When the layer skips draw and we're animating, we still draw the frame.
